.customers-name margin

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <h2 class="title">Our Team</h2>
                 <ul class="name list">
                     <li class="name-card">
-                        <img width="260" src="./images/mark.jpg" alt="дизайнер" width="270">
+                        <img width="264" src="./images/mark.jpg" alt="дизайнер">
                         <div class="position">
                             <h3 class="name-style">Mark Guerrero</h3>
                             <p class="name-pos">Product Designer</p>
@@ -220,7 +220,7 @@
                         </div>
                     </li>
                     <li class="name-card">
-                        <img width="260"  src="./images/tom.jpg" alt="розробник" width="270">
+                        <img width="264"  src="./images/tom.jpg" alt="розробник">
                         <div class="position">
                             <h3 class="name-style">Tom Ford</h3>
                             <p class="name-pos">Frontend Developer</p>
@@ -261,7 +261,7 @@
                         </div>
                     </li>
                     <li class="name-card">
-                        <img width="260"  src="./images/camila.jpg" alt="маркетинг" width="270">
+                        <img width="264"  src="./images/camila.jpg" alt="маркетинг">
                         <div class="position">
                             <h3 class="name-style">Camila Garcia</h3>
                             <p class="name-pos">Marketing</p>
@@ -302,7 +302,7 @@
                         </div>
                     </li>
                     <li class="name-card">
-                        <img width="260"  src="./images/daniel.jpg" alt="UI дизайнер" width="270">
+                        <img width="264"  src="./images/daniel.jpg" alt="UI дизайнер">
                         <div class="position">
                             <h3 class="name-style">Daniel Wilson</h3>
                             <p class="name-pos">UI Designer</p>
