--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
     <!--підвал-->
 
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
         <div class="container footer-inform">
             <div class="footer-about">
                 <a href="./index.html" class="logo-footer"><span class="color-logo">Web</span>Studio</a>
@@ -456,7 +456,7 @@
                     </div>
 
         </div>
-    </footer>  -->
+    </footer>  
 
 
     <script src="./js/modal.js"></script>
