--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--верхня лінія-->
     <header>
-        <div class="container">
+        <div class="container head">
                 <a href="./index.html" class="logo"><span class="color-logo">Web</span>Studio</a>
                 <nav class="header-nav">
                 <ul class="site-nav list">
