--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
 
                 <li class="item"> <a href="tel:+110001111111">+11 (000) 111 11 11</a></li>
             </ul>
-
+            <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu">
+            <svg class="menu-icon" width="32" height="22">
+                <use href="./images/icons/icons.svg#menu"></use>
+              </svg>
+          </button>
         </div>
+        
+        
     </header>
 
 
