--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
                     <li class="name-card">
                         <img class="gallery-img"
                         width="264"
-                        srcset="/images/team/imgmark_mob_264.jpg 264w, 
-                        /images/team/imgmark_mob_528.jpg 528w,  
-                        /images/team/imgmark_tab_264.jpg 264w,
-                        /images/team/imgmark_tab_528.jpg 528w
-                        /images/team/imgmark_desk_264.jpg 264w
-                        /images/team/imgmark_desk_528.jpg 528w"
+                        srcset="./images/team/imgmark_mob_264.jpg 264w, 
+                        ./images/team/imgmark_mob_528.jpg 528w,  
+                        ./images/team/imgmark_tab_264.jpg 264w,
+                        ./images/team/imgmark_tab_528.jpg 528w
+                        ./images/team/imgmark_desk_264.jpg 264w
+                        ./images/team/imgmark_desk_528.jpg 528w"
                         sizes="(min-width:1200px) 264px, (min-width:678px) 264px, (min-width:480px) 264px, 100vw "
-                        src="/images/team/imgmark_mob_264.jpg" 
+                        src="./images/team/imgmark_mob_264.jpg" 
                         alt="дизайнер">
                         <div class="position">
                             <h3 class="name-style">Mark Guerrero</h3>
@@ -236,8 +236,8 @@
                     </li>
                     <li class="name-card">
                         <img width="264"  
-                        srcset="/images/team/imgtom_mob_264.jpg 1x, /images/team/imgtom_mob_528.jpg 2x"
-                        src="/images/team/imgtom_mob_264.jpg" 
+                        srcset="./images/team/imgtom_mob_264.jpg 1x, ./images/team/imgtom_mob_528.jpg 2x"
+                        src="./images/team/imgtom_mob_264.jpg" 
                         alt="розробник">
                         <div class="position">
                             <h3 class="name-style">Tom Ford</h3>
@@ -248,12 +248,12 @@
                                         <svg class="team-icon">
                                             <use 
                                             srcset=
-                                            "/images/team/imgtom_mob_264.jpg 264w, 
-                                             /images/team/imgtom_mob_528.jpg 528w,  
-                                             /images/team/imgtom_tab_264.jpg 264w,
-                                             /images/team/imgtom_tab_528.jpg 528w
-                                             /images/team/imgtom_desk_264.jpg 264w
-                                             /images/team/imgtom_desk_528.jpg 528w"
+                                            "./images/team/imgtom_mob_264.jpg 264w, 
+                                             ./images/team/imgtom_mob_528.jpg 528w,  
+                                             ./images/team/imgtom_tab_264.jpg 264w,
+                                             ./images/team/imgtom_tab_528.jpg 528w
+                                             ./images/team/imgtom_desk_264.jpg 264w
+                                             ./images/team/imgtom_desk_528.jpg 528w"
                                             sizes="(min-width:1200px) 264px, (min-width:678px) 264px, (min-width:480px) 264px, 100vw "
                                             href="./images/icons.svg/symbol-social-defs.svg#icon-instagram"
                                                 width="16" 
@@ -291,14 +291,14 @@
                     <li class="name-card">
                         <img width="264"  
                         srcset="
-                        /images/team/imgcamilla_mob_264.jpg 264w, 
-                        /images/team/imgcamilla_mob_528.jpg 528w,  
-                        /images/team/imgcamilla_tab_264.jpg 264w,
-                        /images/team/imgcamilla_tab_528.jpg 528w
-                        /images/team/imgcamilla_desk_264.jpg 264w
-                        /images/team/imgcamilla_desk_528.jpg 528w"
+                        ./images/team/imgcamilla_mob_264.jpg 264w, 
+                        ./images/team/imgcamilla_mob_528.jpg 528w,  
+                        ./images/team/imgcamilla_tab_264.jpg 264w,
+                        ./images/team/imgcamilla_tab_528.jpg 528w
+                        ./images/team/imgcamilla_desk_264.jpg 264w
+                        ./images/team/imgcamilla_desk_528.jpg 528w"
                         sizes="(min-width:1200px) 264px, (min-width:678px) 264px, (min-width:480px) 264px, 100vw "
-                        src="/images/team/imgcamilla_mob_264.jpg" 
+                        src="./images/team/imgcamilla_mob_264.jpg" 
                         alt="маркетинг">
                         <div class="position">
                             <h3 class="name-style">Camila Garcia</h3>
@@ -342,14 +342,14 @@
                     <li class="name-card">
                         <img width="264"  
                         srcset="
-                        /images/team/imgdan_mob_264.jpg 264w, 
-                        /images/team/imgdan_mob_528.jpg 528w,  
-                        /images/team/imgdan_tab_264.jpg 264w,
-                        /images/team/imgdan_tab_528.jpg 528w
-                        /images/team/imgdan_desk_264.jpg 264w
-                        /images/team/imgdan_desk_528.jpg 528w"
+                        ./images/team/imgdan_mob_264.jpg 264w, 
+                        ./images/team/imgdan_mob_528.jpg 528w,  
+                        ./images/team/imgdan_tab_264.jpg 264w,
+                        ./images/team/imgdan_tab_528.jpg 528w
+                        ./images/team/imgdan_desk_264.jpg 264w
+                        ./images/team/imgdan_desk_528.jpg 528w"
                         sizes="(min-width:1200px) 264px, (min-width:678px) 264px, (min-width:480px) 264px, 100vw "
-                        src="/images/team/imgdan_mob_264.jpg" 
+                        src="./images/team/imgdan_mob_264.jpg" 
                         alt="UI дизайнер">
                         <div class="position">
                             <h3 class="name-style">Daniel Wilson</h3>
