--- a/index.html
+++ b/index.html
@@ -174,9 +174,21 @@
             <div class="container">
                 <h2 class="title">What are we doing</h2>
                 <ul class="company-list list">
-                    <li><img src="./images/pc.jpg" alt="комп'ютер" width="370"></li>
-                    <li><img src="./images/app.jpg" alt="програми" width="370"></li>
-                    <li><img src="./images/tel.jpg" alt="телефон" width="370"></li>
+                    <li><img 
+                        srcset="./images/work/work@1xpc.jpg 1x, ./images/work/work@2xpc.jpg 2x"
+                        src="./images/work/work@1xpc.jpg" 
+                        alt="комп'ютер" 
+                        width="370"></li>
+                    <li><img 
+                        srcset="./images/work/work@1xapp.jpg 1x, ./images/work/work@2xapp.jpg 2x"
+                        src="./images/work/work@1xapp.jpg" 
+                        alt="програми" 
+                        width="370"></li>
+                    <li><img 
+                        srcset="./images/work/work@1xphone.jpg 1x, ./images/work/work@2xphone.jpg 2x"
+                        src="./images/work/work@1xphone.jpg" 
+                        alt="телефон" 
+                        width="370"></li>
                 </ul>
             </div>
         </section>
